Changed la caixa label·

--- a/tigahelp/templates/tigahelp/about_us_es.html
+++ b/tigahelp/templates/tigahelp/about_us_es.html
@@ -17,7 +17,7 @@
     <p>Mosquito Alert es posible también gracias a la participación de distintas personas expertas (profesionales que, por ejemplo, validan los datos ciudadanos) y entidades de varios países que trabajan en el ámbito de la salud pública, el control de especies invasoras o entidades de educación ambiental.</p>
 
     <h2>Financiación y participación en proyectos</h2>
-    <p>Mosquito Alert participa en proyectos competitivos de investigación, comunicación científica y divulgación (Plan Nacional estatal, Horizonte 2020 de la Unión Europea, Obra Social la Caixa, entre otros), y se financia también con la aportación de recursos de las entidades que lideran el proyecto y entidades colaboradoras.</p>
+    <p>Mosquito Alert participa en proyectos competitivos de investigación, comunicación científica y divulgación (Plan Nacional estatal, Horizonte 2020 de la Unión Europea, "Fundació" la Caixa, entre otros), y se financia también con la aportación de recursos de las entidades que lideran el proyecto y entidades colaboradoras.</p>
 
     <p>Más información sobre entidades, colaboraciones y proyectos en <a href="www.mosquitoalert.com">www.mosquitoalert.com</a> y redes sociales.</p>
 
