--- a/tigahelp/templates/tigahelp/about_us_ca.html
+++ b/tigahelp/templates/tigahelp/about_us_ca.html
@@ -17,7 +17,7 @@
     <p>Mosquito Alert és possible també gràcies a la participació de diferents persones expertes (professional que, per exemple, validin les dades ciutadanes), i entitats de varis països que treballen en l'àmbit de la salut pública, el control d'espècies invasores o entitats d'educació ambiental.</p>
 
     <h2>Financiació i participació a projectes</h2>
-    <p>Mosquito Alert participa a projectes competitius de recerca, comunicació científica i divulgació (Plan Nacional estatal, Horitzó 2020 de la Unió Europea, Obra Social la Caixa entre d'altres), i es financia també amb l'aportació de recursos de les entitats que lideren el projecte i entitats col·laboradores</p>
+    <p>Mosquito Alert participa a projectes competitius de recerca, comunicació científica i divulgació (Plan Nacional estatal, Horitzó 2020 de la Unió Europea, Fundació "la Caixa" entre d'altres), i es financia també amb l'aportació de recursos de les entitats que lideren el projecte i entitats col·laboradores</p>
 
     <p>Més informació sobre entitats, col·laboracions i projectes a <a href="www.mosquitoalert.com">www.mosquitoalert.com</a> i xarxes socials.</p>
 
