--- a/tigacrafting/templates/tigacrafting/expert_report_status.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_status.html
@@ -1,9 +1,7 @@
-{% load staticfiles %}
+{% load static %}
 {% load leaflet_tags %}
 {% load i18n %}
 {% load floppyforms %}
-
-
 <!DOCTYPE html>
 <html lang={% block language %}"en"{% endblock %}>
 <head>
@@ -86,9 +84,15 @@
             }
         {%  endfor %}
 
+
     </script>
 {% endblock %}
 
+{% block js %}
+{% endblock %}
+
+{% block css %}
+{% endblock %}
 </head>
 
 <body>
@@ -618,6 +622,8 @@
 
     </script>
 
+    {% block extra_js %}
+    {% endblock %}
 
 </body>
 </html>
