Added version number to workload script to force reload on safari

--- a/stats/templates/stats/workload.html
+++ b/stats/templates/stats/workload.html
@@ -36,7 +36,7 @@
             load_on_start = true;
         {% endif %}
     </script>
-    <script src="{% static 'stats/workload.js' %}"></script>
+    <script src="{% static 'stats/workload.js' %}?1660"></script>
   </head>
   <div class="navbar-wrapper">
         <div class="container">
