Fixed picture in user rank, modified notification messages

--- a/tigaserver_app/templates/tigaserver_app/award_notification_ca.html
+++ b/tigaserver_app/templates/tigaserver_app/award_notification_ca.html
@@ -1,15 +1,17 @@
 {% extends "tigaserver_app/award_notification.html" %}
-
+{% block language %}
+<html lang="ca">
+{% endblock %}
 {% block title_block %}
-    <title>Acabes de rebre una recompensa d'XP!</title>
+    <title>Acabes de rebre una recompensa de punts!</title>
 {% endblock %}
 
 {% block title_header_block %}
-    <h2>Acabes de rebre una recompensa d'XP!</h2>
+    <h2>Acabes de rebre una recompensa de punts!</h2>
 {% endblock %}
 
 {% block amount_xp_awarded %}
-    <p>Has rebut <b style="color:red;">{{ amount_awarded }} XP!</b></p>
+    <p>Has rebut <b style="color:red;">{{ amount_awarded }} punts!</b></p>
 {% endblock %}
 
 {% block reason_awarded %}
