--- a/tigaserver_app/templates/tigaserver_app/award_notification_en.html
+++ b/tigaserver_app/templates/tigaserver_app/award_notification_en.html
@@ -1,15 +1,15 @@
 {% extends "tigaserver_app/award_notification.html" %}
 
 {% block title_block %}
-    <title>You just received an XP award!</title>
+    <title>You just received a points award!</title>
 {% endblock %}
 
 {% block title_header_block %}
-    <h2>You just received an XP award!</h2>
+    <h2>You just received a points award!</h2>
 {% endblock %}
 
 {% block amount_xp_awarded %}
-    <p>You just received <b style="color:red;">{{ amount_awarded }} XP!</b></p>
+    <p>You just received <b style="color:red;">{{ amount_awarded }} points!</b></p>
 {% endblock %}
 
 {% block reason_awarded %}
