--- a/tigaserver_app/templates/tigaserver_app/award_notification_es.html
+++ b/tigaserver_app/templates/tigaserver_app/award_notification_es.html
@@ -3,11 +3,11 @@
 <html lang="es">
 {% endblock %}
 {% block title_block %}
-    <title>¡Acabas de recibir una recompensa de puntos!</title>
+    <title>&#161;Acabas de recibir una recompensa de puntos!</title>
 {% endblock %}
 
 {% block title_header_block %}
-    <h2>¡Acabas de recibir una recompensa de puntos!</h2>
+
 {% endblock %}
 
 {% block amount_xp_awarded %}
@@ -19,11 +19,11 @@
 {% endblock %}
 
 {% block report_related %}
-    {% if report %}
+    {% if picture_link %}
         <img src="{{ picture_link }}" width=100%>
     {% endif %}
 {% endblock %}
 
 {% block congratulations %}
-    <p>¡Felicidades!</p>
+    <p>&#161;Felicidades!</p>
 {% endblock %}
