--- a/tigaserver_app/templates/tigaserver_app/award_notification_ca.html
+++ b/tigaserver_app/templates/tigaserver_app/award_notification_ca.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block title_header_block %}
-    <h2>Acabes de rebre una recompensa de punts!</h2>
+
 {% endblock %}
 
 {% block amount_xp_awarded %}
@@ -19,7 +19,8 @@
 {% endblock %}
 
 {% block report_related %}
-    {% if report %}
+    {% if picture_link %}
+        <img src="{{ picture_link }}" width=100%>
     {% endif %}
 {% endblock %}
 
