Revised html docs

--- a/tigahelp/templates/tigahelp/license_en.html
+++ b/tigahelp/templates/tigahelp/license_en.html
@@ -2,62 +2,38 @@
 {% load staticfiles %}
 
 {% block page_title %}
-    Mosquito Alert License
+Mosquito Alert License
 {% endblock %}
 
 
 {% block content %}
 <div class="center">
-<h2>License</h2>
+    <h2>License</h2>
 </div>
 
-<p>
-    Mosquito Alert is a citizen science system that allows collaboration among various actors in the study, monitoring and control of mosquitoes that are vectors of diseases such as dengue, Zika, chikungunya or West Nile fever. The Mosquito Alert app (formerly Tigatrapp) is an application for mobile phones and tablets that allows anyone to participate in Mosquito Alert.
-</p>
-
-<p>
-    The Mosquito Alert app has been developed by the following institutions: the Spanish National Research Council’s Blanes Center for Advanced Studies (CEAB-CSIC), the Center for Ecological Research and Forest Applications (CREAF), Pompeu Fabra University (UPF) and the Catalan Institute for Research and Advanced Studies (ICREA).
-</p>
-
-<p>
-    The source code for the Mosquito Alert app is available on the project website at <a href="http://www.mosquitoalert.com">www.mosquitoalert.com</a>.
-</p>
-
-<p>
-    Authors (in alphabetical order): Frederic Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agustí Escobar, Joan Garriga, Misericòrdia Gironés, Zivko Juznic-Zonta, Aitana Oltra, John R.B. Palmer, Ariadna Peña, Alex Richter-Boix, Isis Sanpere, Alex Tarragó, Marina Torres.
-</p>
-
-<p>
-    In collaboration with the AIM COST community (<a href="https://www.aedescost.eu/">https://www.aedescost.eu/</a>) and Global Mosquito Alert (<a href="https://globalmosquitoalert.com/">https://globalmosquitoalert.com/</a>).
-</p>
-
-<p>
-    Mosquito images in the app's Mosquito guide by Roger Eritja, all rights reserved.
-</p>
-
-<p>
-    Illustrations of mosquitoes in the Mosquito guide and Tutorial of the app by JL Ordoñez, CC BY 2.0,
-</p>
-
-<p>
-    Drain Icon, modified by Alex Richter, from Free Icons Library's Drain Icon # 338924 (<a href="https://icon-library.net/icon/drain-icon-3.htm">https://icon-library.net/icon/drain-icon-3.htm</a>). Public domain.
-</p>
-
-<p>
-    Mosquito Bite, modified by Alex Richter-Boix from Mosquito Bite by Sveta_Aho, Adobe Stock Standard License
-</p>
-
-<p>
-    Life cycle, Mobile phone silhouette, Background tracking drawing, by Alex Richter-Boix, CC BY 2.0.
-</p>
-
-<p>
-    Mosquito Alert is free software: it can be redistributed and/or modified under the terms of the GNU General Public License published by the Free Software Foundation (license version 3 or higher).
-</p>
-
-<p>
-    This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
-You should have received a copy of the GNU General Public License along with this program. If not, see http://www.gnu.org/licenses.
-</p>
+<p> Mosquito Alert is a citizen science system that allows collaboration among various actors in the study, monitoring
+    and control of mosquitoes that are vectors of diseases such as dengue, Zika, chikungunya or West Nile fever. The
+    Mosquito Alert app (formerly Tigatrapp) is an application for mobile phones and tablets that allows anyone to
+    participate in Mosquito Alert. </p> <p> The Mosquito Alert app has been developed by the following institutions: the
+    Spanish National Research Council’s Blanes Center for Advanced Studies (CEAB-CSIC), the Center for Ecological
+    Research and Forest Applications (CREAF), Pompeu Fabra University (UPF) and the Catalan Institute for Research and
+    Advanced Studies (ICREA). </p> <p> The source code for the Mosquito Alert app is available on the project website at
+    <a href="http://www.mosquitoalert.com">www.mosquitoalert.com</a>. </p> <p> Authors (in alphabetical order): Frederic
+    Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agustí Escobar, Joan Garriga, Misericòrdia Gironés,
+    Zivko Juznic-Zonta, Aitana Oltra, John R.B. Palmer, Ariadna Peña, Alex Richter-Boix, Isis Sanpera, Alex Tarragó,
+    Marina Torres. </p> <p> In collaboration with the AIM COST community (<a href="https://www.aedescost.eu/">https://www.aedescost.eu/</a>)
+    and Global Mosquito Alert (<a href="https://globalmosquitoalert.com/">https://globalmosquitoalert.com/</a>). </p>
+<p> Mosquito images in the app's Mosquito guide by Roger Eritja, all rights reserved. </p> <p> Illustrations of
+    mosquitoes in the Mosquito guide and Tutorial of the app by JL Ordoñez, CC BY 2.0, </p> <p> Drain Icon, modified by
+    Alex Richter, from Free Icons Library's Drain Icon # 338924 (<a
+            href="https://icon-library.net/icon/drain-icon-3.htm">https://icon-library.net/icon/drain-icon-3.htm</a>).
+    Public domain. </p> <p> Mosquito Bite, modified by Alex Richter-Boix from Mosquito Bite by Sveta_Aho, Adobe Stock
+    Standard License </p> <p> Life cycle, Mobile phone silhouette, Background tracking drawing, by Alex Richter-Boix, CC
+    BY 2.0. </p> <p> Mosquito Alert is free software: it can be redistributed and/or modified under the terms of the GNU
+    General Public License published by the Free Software Foundation (license version 3 or higher). </p> <p> This
+    program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
+    warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
+    details. You should have received a copy of the GNU General Public License along with this program. If not, see
+    http://www.gnu.org/licenses. </p>
 
 {% endblock %}
