--- a/tigahelp/templates/tigahelp/terms_es.html
+++ b/tigahelp/templates/tigahelp/terms_es.html
@@ -2,35 +2,64 @@
 {% load staticfiles %}
 
 {% block page_title %}
-    Acuerdo del usuario
+Acuerdo del usuario
 {% endblock %}
 
 
 {% block content %}
 
-    <div class="center">
-        <h2>Acuerdo del usuario</h2>
-    </div>
+<div class="center">
+    <h2>Acuerdo del usuario</h2>
+</div>
 
-    <p>Mosquito Alert (en cualquiera de las denominaciones que haya tenido en el pasado o que pueda adquirir en el futuro) es un sistema de ciencia ciudadana gestionado por el Centro de Estudios Avanzados de Blanes (CEAB-CSIC) del Consejo Superior de Investigaciones Científicas, Centro de Investigación Ecológica y Aplicaciones Forestales (CREAF), Universidad Pompeu Fabra (UPF) e Instituto Catalán de Investigación y Estudios Avanzados (ICREA).</p>
-    <p>Mosquito Alert depende de la recopilación de datos por parte del público en relación a varias especies de mosquitos que son transmisores de enfermedades. Los ciudadanos participan enviando y compartiendo, datos e imágenes, a través de las distintas aplicaciones Mosquito Alert para dispositivos móviles y otros dispositivos electrónicos. Los participantes deben ser adultos o deben participar bajo la supervisión de un adulto, de acuerdo con la legislación de España y de su país de residencia. Los participantes también deben aceptar la política de privacidad de Mosquito Alert y aceptar los siguientes términos de uso:</p>
-
-    <ol>
-        <li>
-            Las especies de mosquitos con las que trabaja Mosquito Alert pueden ser vectores de enfermedades como el dengue, el chikungunya y el Zika. Mosquito Alert contribuye a la lucha contra estas enfermedades mediante la recopilación de datos e imágenes, el análisis de toda esta información y la realización de actividades de sensibilización, seguimiento y control de mosquitos. Como estos mosquitos son transmisores de enfermedades, al participar en Mosquito Alert debes extremar las precauciones y no buscar de forma activa a estas especies (directamente o a través de sus criaderos), especialmente en lugares donde las enfermedades que transmiten son endémicas, o durante un brote de tales enfermedades. Participar en Mosquito Alert implica, por un lado, informar de los encuentros con mosquitos que tienen las personas durante sus actividades normales, y por otro, cambiar sus actividades para reducir su exposición a los mosquitos y sus criaderos. Así que debe aceptar que no debe aumentar de ninguna manera su exposición a los mosquitos participando en este proyecto.
-        </li>
-        <li>
-            Al compartir sus datos y obras (por ejemplo, fotografías) con Mosquito Alert, acepta estos términos de uso, acepta que las obras (por ejemplo, fotografías) se difundan de forma anónima sin indicar su nombre o seudónimo y otorga a las instituciones que gestionan Mosquito Alert un Licencia asociada a su obra de duración igual al copyright aplicable vigente para poder explotar la obra sin restricción alguna y cederla a terceros en todo el mundo, libre de regalías, no exclusiva y sublicenciable. En cualquier caso, estos términos no implican para el autor original ninguna restricción en el uso de sus obras, pudiendo explotarlas por otros medios de manera compatible con la cesión concedida mediante este documento.
-        </li>
-        <li>
-            Por norma general, cualquier creación original que pueda protegerse por derechos de autor será difundida por Mosquito Alert con licencia CC BY, indicando autor anónimo y el nombre del proyecto (ejemplo: Anónimo, CC BY Mosquito Alert), aunque contenga el nombre del autor en él o en sus metadatos. Cuando sea posible, parte de las bases de datos o tablas resultantes de las contribuciones de los usuarios se publicarán, como regla general, bajo una licencia CC0. En caso de necesidad de dar acceso a información considerada sensible a terceros (por ejemplo, profesionales encargados del seguimiento y control de mosquitos, personal investigador, gestores de salud pública, etc.), se establecerán protocolos y/o licencias adecuadas para esta difusión.
-        </li>
-        <li>
-            Garantizas que tienes los derechos legales necesarios sobre los datos y obras que compartes con Mosquito Alert y que estos no son difamatorios, y no violan ninguna ley. La participación en Mosquito Alert es anónima para garantizar la protección de la privacidad de los participantes. Por tanto, garantizas que no añadirás información personal tuya o de terceros en los datos u obras que envíes a Mosquito Alert. Usted comprende que estos datos u obras pueden ser cedidos a terceros, y que Mosquito Alert no puede garantizar la capacidad de eliminar cualquier posible dato personal que envíe por error.
-        </li>
-        <li>
-            Aceptas indemnizar a las personas, instituciones y/o miembros de Mosquito Alert y colaboradores por cualquier carga legal y/o monetaria y cualquier otro gasto que pueda incurrir como resultado de su incumplimiento de la garantía anterior.
-        </li>
-    </ol>
+<p>Mosquito Alert (en cualquiera de las denominaciones que haya tenido en el pasado o que pueda adquirir en el futuro)
+    es un sistema de ciencia ciudadana gestionado por el Centro de Estudios Avanzados de Blanes del Consejo Superior de
+    Investigaciones Científicas (CEAB-CSIC)<span>, Centro de Investigación Ecológica y Aplicaciones Forestales (CREAF), Universidad Pompeu Fabra (UPF) e Instituto Catalán de Investigación y Estudios Avanzados (ICREA).</span>
+</p> <p>Mosquito Alert depende de la recopilación de datos por parte del público en relación a varias especies de
+    mosquitos que son transmisores de enfermedades. La ciudadanía participa enviando y compartiendo, datos e imágenes, a
+    través de las distintas aplicaciones Mosquito Alert para dispositivos móviles y otros dispositivos electrónicos.
+    Para participar es necesario ser mayor de edad o participar bajo la supervisión de un adulto, de acuerdo con la
+    legislación española y de tu país de residencia.</p> <p>Para participar también debes aceptar la política de
+    privacidad de Mosquito Alert y aceptar los siguientes términos de uso:</p>
+<ol>
+    <li>Las especies de mosquitos con las que trabaja Mosquito Alert pueden ser vectores de enfermedades como el dengue,
+        el chikungunya y el Zika. Mosquito Alert contribuye a la lucha contra estas enfermedades mediante la
+        recopilación de datos e imágenes, el análisis de toda esta información y la realización de actividades de
+        sensibilización, seguimiento y control de mosquitos. Como estos mosquitos son transmisores de enfermedades, al
+        participar en Mosquito Alert debes extremar las precauciones y no buscar de forma activa a estas especies
+        (directamente o a través de sus criaderos), especialmente en lugares donde las enfermedades que transmiten son
+        endémicas, o durante un brote de tales enfermedades. Participar en Mosquito Alert implica, por un lado, informar
+        de los encuentros con mosquitos que tienen las personas durante sus actividades normales, y por otro, cambiar
+        sus actividades para reducir su exposición a los mosquitos y sus criaderos. Así que debes aceptar que no debes
+        aumentar de ninguna manera tu exposición a los mosquitos participando en este proyecto.
+    </li>
+    <li>Al compartir tus datos y obras (por ejemplo, fotografías) con Mosquito Alert, acepta estos términos de uso,
+        acepta que las obras (por ejemplo, fotografías) se difundan de forma anónima sin indicar tu nombre o seudónimo y
+        otorgas a las instituciones que gestionan Mosquito Alert un Licencia asociada a tu obra de duración igual al
+        copyright aplicable vigente para poder explotar la obra sin restricción alguna y cederla a terceros en todo el
+        mundo, libre de regalías, no exclusiva y sublicenciable. En cualquier caso, estos términos no implican para el
+        autor original ninguna restricción en el uso de sus obras, pudiendo explotarlas por otros medios de manera
+        compatible con la cesión concedida mediante este documento.
+    </li>
+    <li>Por norma general, cualquier creación original que pueda protegerse por derechos de autor será difundida por
+        Mosquito Alert con licencia CC BY, indicando autor anónimo y el nombre del proyecto (ejemplo: Anónimo, CC BY
+        Mosquito Alert), aunque contenga el nombre del autor en él o en sus metadatos. Cuando sea posible, parte de las
+        bases de datos o tablas resultantes de las contribuciones de los usuarios se publicarán, como regla general,
+        bajo una licencia CC0. En caso de necesidad de dar acceso a información considerada sensible a terceros (por
+        ejemplo, profesionales encargados del seguimiento y control de mosquitos, personal investigador, gestores de
+        salud pública, etc.), se establecerán protocolos y/o licencias adecuadas para esta difusión.
+    </li>
+    <li>Garantizas que tienes los derechos legales necesarios sobre los datos y obras que compartes con Mosquito Alert y
+        que estos no son difamatorios, y no violan ninguna ley. La participación en Mosquito Alert es anónima para
+        garantizar la protección de la privacidad de los participantes. Por tanto, garantizas que no añadirás
+        información personal tuya o de terceros en los datos u obras que envíes a Mosquito Alert. Comprendes que estos
+        datos u obras pueden ser cedidos a terceros, y que Mosquito Alert no puede garantizar la capacidad de eliminar
+        cualquier posible dato personal que envíes por error.
+    </li>
+    <li>Aceptas indemnizar a las personas, instituciones y/o miembros de Mosquito Alert y colaboradores por cualquier
+        carga legal y/o monetaria y cualquier otro gasto que pueda incurrir como resultado de tu incumplimiento de la
+        garantía anterior.
+    </li>
+</ol>
 
 {% endblock %}
