--- a/tigahelp/templates/tigahelp/scoring_ca.html
+++ b/tigahelp/templates/tigahelp/scoring_ca.html
@@ -21,25 +21,24 @@ Mosquito Alert Info Puntuació
 
 
         <h2>INFO PUNTUACIÓ</h2>
-        <p>Les accions realitzades en Mosquito Alert tenen reconeixement i recompensa en forma de punts. El nombre de
+        <p>Les accions realitzades a Mosquito Alert tenen reconeixement i recompensa en forma de punts. El nombre de
             punts per informe varia en funció de la informació aportada i de la seva qualitat.</p>
         <p>Els punts màxims que es poden obtenir per informe són:</p>
         <ul>
             <li>Mosquit <em>Aedes</em> invasor: 20 punts</li>
             <li>Mosquit comú: 14 punts</li>
             <li>Lloc de cria embornal: 20 punts</li>
-            <li>Un altre lloc de cria en la via pública: 16 punts</li>
+            <li>Un altre lloc de cria a la via pública: 16 punts</li>
         </ul>
         <p>A més, existeixen bonificacions extra pel primer mosquit de la temporada, primer informe del dia o per
             participar amb freqüència. Quan s'aconsegueix un nombre concret d'informes, no sols s'obté uns punts extra,
             sinó que s'aconsegueix un trofeu especial. Existeixen diferents trofeus segons les fites aconseguides.</p>
         <p>Aquells informes que s'enviïn com a mosquit però resultin no ser mosquits, segons la validació experta, no
-            obtindran punts. Igual que tampoc es puntuarà una foto que no permet identificar el mosquit o lloc de
-            cria.</p>
-        <p>L'acumulació de punts et permetrà anar ascendint de <b>nivell</b>:</p>
+            obtindran punts. Tampoc es puntuarà una foto que no permet identificar el mosquit o lloc de cria.</p>
+        <p>L'acumulació de punts et permetrà anar pujant de <b>nivell</b>:</p>
         <ul>
-            <li>(1) principiant (<em>beginner</em>)</li>
-            <li>(2) col·laborador (<em>contributor</em>)</li>
+            <li>(1) Principiant (<em>beginner</em>)</li>
+            <li>(2) Col·laborador (<em>contributor</em>)</li>
             <li>(3) Expert (<em>expert</em>)</li>
             <li>(4) Mestre (<em>master</em>)</li>
             <li>(5) Gran mestre (<em>grandmaster</em>)</li>
@@ -51,10 +50,10 @@ Mosquito Alert Info Puntuació
 
 
         <h2>Panell de punts</h2>
-        <p>S’accedeix al rànquing global fent clic sobre la puntuació en la pantalla principal. Pressionat sobre una
-            posició del rànquing es desplega el desglossament de punts obtinguts per l’usuari.</p>
-        <p>Fent clic en “Més detalls” s’accedeix al panell de punts desglossat.</p>
-        <p>En aquest apartat hi ha una llista dels informes enviats amb la puntuació obtinguda en cadascun d’ells. Els
+        <p>S’accedeix al rànquing global fent clic sobre la puntuació a la pantalla principal. Pressionant sobre una
+            posició del rànquing es desglossen els punts obtinguts per l’usuari.</p>
+        <p>Fent clic a “Més detalls” s’accedeix al panell de punts desglossat.</p>
+        <p>En aquest apartat hi ha una llista dels informes enviats amb la puntuació obtinguda a cadascun d’ells. Els
             informes són interactius, en clicar s’obté la puntuació detallada i el perquè de la puntuació.</p>
 
 
