Fixed faulty www.mosquitoalert.com link

--- a/tigahelp/templates/tigahelp/about_us_el.html
+++ b/tigahelp/templates/tigahelp/about_us_el.html
@@ -29,7 +29,7 @@
     συνεργαζόμενους φορείς.</p>
 
 <p>Περισσότερες πληροφορίες για οντότητες, συνεργασίες και έργα μπορείτε να βρείτε στη διεύθυνση <a
-        href="www.mosquitoalert.com"> www.mosquitoalert.com </a> και στα κοινωνικά δίκτυα.</p>
+        href="http://www.mosquitoalert.com"> www.mosquitoalert.com </a> και στα κοινωνικά δίκτυα.</p>
 
 <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
 
