--- a/tigahelp/templates/tigahelp/about_us_es.html
+++ b/tigahelp/templates/tigahelp/about_us_es.html
@@ -22,7 +22,7 @@ Sobre Nosotros
     Financiación y participación en proyectos</h2> <p>Mosquito Alert participa en proyectos competitivos de
     investigación, comunicación científica y divulgación (Plan Nacional estatal, Horizonte 2020 de la Unión Europea,
     Fundación "la Caixa", entre otros), y se financia también con la aportación de recursos de las entidades que lideran
-    el proyecto y entidades colaboradoras.</p> <p>Más información sobre entidades, colaboraciones y proyectos en <a href="www.mosquitoalert.com">www.mosquitoalert.com</a> y redes sociales.</p>
+    el proyecto y entidades colaboradoras.</p> <p>Más información sobre entidades, colaboraciones y proyectos en <a href="http://www.mosquitoalert.com">www.mosquitoalert.com</a> y redes sociales.</p>
 
 <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
 
