--- a/tigahelp/templates/tigahelp/about_us_hu.html
+++ b/tigahelp/templates/tigahelp/about_us_hu.html
@@ -26,7 +26,7 @@ Rólunk
     projects, többek közt). A Mosquito Alert további vezető és együttműködő szervezetek forrásainak hozzájárulására is
     támaszkodik.</p>
 <p>A szervezetekkel, együttműködésekkel és projektekkel kapcsolatos további információk a következő webhelyen
-    találhatók: <a href="www.mosquitoalert.com">www.mosquitoalert.com</a> és a közösségi hálózatokon.</p>
+    találhatók: <a href="http://www.mosquitoalert.com">www.mosquitoalert.com</a> és a közösségi hálózatokon.</p>
 
 <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
 
