--- a/tigahelp/templates/tigahelp/about_us_sl.html
+++ b/tigahelp/templates/tigahelp/about_us_sl.html
@@ -18,7 +18,7 @@ O Nas
 </p>
 <h2>Financiranje in sodelovanje pri projektih</h2>
 <p>Mosquito Alert sodeluje pri konkurenčnih projektih za raziskave, razširjanje znanstvenih sporočil (med drugim španski <em> Plan Estal </em>, linija EU za financiranje Obzorja 2020 in fundacije "la Caixa"). Mosquito Alert se opira tudi na prispevke vodilnih in sodelujočih subjektov.</p>
-<p>Več informacij o entitetah, sodelovanjih in projektih najdete na <a href="www.mosquitoalert.com">www.mosquitoalert.com </a> in v družabnih omrežjih.</p>
+<p>Več informacij o entitetah, sodelovanjih in projektih najdete na <a href="http://www.mosquitoalert.com">www.mosquitoalert.com </a> in v družabnih omrežjih.</p>
 
 <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
 
