--- a/tigahelp/templates/tigahelp/about_us_sq.html
+++ b/tigahelp/templates/tigahelp/about_us_sq.html
@@ -19,7 +19,7 @@
     <h2>Financimi dhe pjesëmarrja në projekt</h2>
     <p>"Alerti i Mushkonjave" merr pjesë në projekte konkuruese kërkmimore, në shpërndarjen dhe përhapjen e komunikimit shkencor (duke përfshirë Planin Spanjoll të Shpërthimit, linjën e fondeve nga projekti Horizon 2020 dhe midis të tjerave, Projekti i Themelimit "la Caixa". Alerti i Mushkonjave gjithashtu mbështetet nga kontribute të burimeve nga entitetet lidere dhe ato bashkëpunuese.</p>
 
-    <p>Më shumë informacione mbi entitetet, bashkëpunëtorët dhe projektet mund te gjenden në: www.mosquitoalert.com dhe në rrjete sociale.</p>
+    <p>Më shumë informacione mbi entitetet, bashkëpunëtorët dhe projektet mund te gjenden në: <a href="http://www.mosquitoalert.com">www.mosquitoalert.com </a> dhe në rrjete sociale.</p>
 
     <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
 
