--- a/tigahelp/templates/tigahelp/project_about_ca.html
+++ b/tigahelp/templates/tigahelp/project_about_ca.html
@@ -108,7 +108,7 @@ Sobre El Projecte
         </ul>
         <h2>On puc trobar més informació?</h2>
         <p>Trobaràs més informació a la pàgina web del projecte i a les xarxes socials.</p>
-        <p><a href="www.mosquitoalert.com">www.mosquitoalert.com</a></p>
+        <p><a href="http://www.mosquitoalert.com">www.mosquitoalert.com</a></p>
         <p>Als ajustos de l’app trobaràs el tutorial per a participar, la guia de mosquits per a aprendre a
             identificar-los, la política de privacitat i termes d’ús i informació sobre les entitats que impulsen el
             projecte.</p>
