--- a/tigahelp/templates/tigahelp/project_about_el.html
+++ b/tigahelp/templates/tigahelp/project_about_el.html
@@ -129,7 +129,7 @@
         <h2>Πού μπορείς να βρεις περισσότερες πληροφορίες;</h2>
 
         <p>Θα βρείς περισσότερες πληροφορίες στον ιστότοπο του έργου και στα κοινωνικά μέσα.</p>
-        <p><a href="www.mosquitoalert.com">www.mosquitoalert.com</a></p>
+        <p><a href="http://www.mosquitoalert.com">www.mosquitoalert.com</a></p>
 
         <p>Στις ρυθμίσεις της εφαρμογής θα βρείς έναν εγχειρίδιο χρήσης, έναν οδηγό που θα σε βοηθήσει να εντοπίσεις
             κουνούπια, την πολιτική απορρήτου και τους όρους χρήσης και πληροφορίες σχετικά με τις οντότητες που
