--- a/tigahelp/templates/tigahelp/project_about_en.html
+++ b/tigahelp/templates/tigahelp/project_about_en.html
@@ -105,7 +105,7 @@ About The Project
         </ul>
         <h2>Where can I find more information?</h2>
         <p>You will find more information on the project website and on social media.</p>
-        <p><a href="www.mosquitoalert.com">www.mosquitoalert.com</a></p>
+        <p><a href="http://www.mosquitoalert.com">www.mosquitoalert.com</a></p>
         <p>In the settings of the app you will find a participant tutorial, a guide to help you identify mosquitos, the
             privacy policy and terms of use, and information about the entities behind this project.</p>
 
