--- a/tigahelp/templates/tigahelp/project_about_hu.html
+++ b/tigahelp/templates/tigahelp/project_about_hu.html
@@ -109,7 +109,7 @@ A Projektről
         </ul>
         <h2>Hol találok több információt?</h2>
         <p>További információt a projekt weboldalán és a közösségi médiában találsz.</p>
-        <p><a href="www.mosquitoalert.com">www.mosquitoalert.com</a></p>
+        <p><a href="http://www.mosquitoalert.com">www.mosquitoalert.com</a></p>
         <p>Az alkalmazás beállításainál találsz egy általános útmutatót a részvételhez, egy útmutatót, amely segít
             beazonosítani a szúnyogokat, az adatvédelmi irányelveket és a felhasználási feltételeket, valamint további
             információkat a projekt mögött álló entitásokról.</p>
