--- a/tigahelp/templates/tigahelp/about_us_fr.html
+++ b/tigahelp/templates/tigahelp/about_us_fr.html
@@ -24,7 +24,7 @@
     espagnol, la ligne de financement Horizon 2020 de l'UE et les projets de la Fondation "la Caixa", entre autres).
     Mosquito Alert s'appuie également sur les contributions de ressources des entités chefs de file et collaboratrices.
 </p> <p>Plus d'informations sur les entités, les collaborations et les projets peuvent être trouvées sur <a
-        href="www.mosquitoalert.com">www.mosquitoalert.com</a> et sur les réseaux sociaux.</p>
+        href="http://www.mosquitoalert.com">www.mosquitoalert.com</a> et sur les réseaux sociaux.</p>
 
 <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
 
