Fixed broken/invisible links in licenses

--- a/tigahelp/templates/tigahelp/license_bg.html
+++ b/tigahelp/templates/tigahelp/license_bg.html
@@ -34,6 +34,6 @@ Mosquito Alert Лиценз
     (лиценз версия 3 или по-нова). </p> <p> Тази програма се разпространява с надеждата, че ще бъде полезна, но БЕЗ
     НИКАКВА ГАРАНЦИЯ; без дори подразбиращата се гаранция за ТЪРГОВСКА ГОДНОСТ или ПРИЛОЖИМОСТ ЗА ДЕЙСТВИТЕЛНА ЦЕЛ.
     Вижте Общия публичен лиценз на GNU за повече подробности. Заедно с тази програма трябваше да сте получили копие от
-    Общия публичен лиценз на GNU . Ако не сте, вижте http://www.gnu.org/licenses. </p>
+    Общия публичен лиценз на GNU . Ако не сте, вижте <a href="http://www.gnu.org/licenses">http://www.gnu.org/licenses</a>. </p>
 
 {% endblock %}
