--- a/tigahelp/templates/tigahelp/license_de.html
+++ b/tigahelp/templates/tigahelp/license_de.html
@@ -36,6 +36,6 @@ Mosquito Alert Lizenz
     verbreitet, dass es nützlich sein wird, jedoch OHNE JEGLICHE GARANTIE; ohne die implizite Garantie der
     MARKTGÄNGIGKEIT oder EIGNUNG FÜR EINEN BESTIMMTEN ZWECK. Weitere Informationen finden Sie in der GNU General Public
     License. Sie sollten zusammen mit diesem Programm eine Kopie der GNU General Public License erhalten haben. Wenn
-    nicht, siehe http://www.gnu.org/licenses. </p>
+    nicht, siehe <a href="http://www.gnu.org/licenses">http://www.gnu.org/licenses</a>. </p>
 
 {% endblock %}
