--- a/tigahelp/templates/tigahelp/license_el.html
+++ b/tigahelp/templates/tigahelp/license_el.html
@@ -37,6 +37,6 @@
     χρήσιμο, αλλά ΧΩΡΙΣ ΕΓΓΥΗΣΗ, χωρίς καν οποιαδήποτε εγγύηση ΕΜΠΟΡΙΚΟΤΗΤΑΣ ή ΚΑΤΑΛΛΗΛΟΤΗΤΑΣ ΓΙΑ ΕΙΔΙΚΟ ΣΚΟΠΟ.
     Ανατρέξτε στην άδεια GNU General Public License για περισσότερες λεπτομέρειες. Θα πρέπει να έχετε λάβει αντίγραφο
     της άδειας GNU General Public License μαζί με αυτό το πρόγραμμα. Εάν όχι, ανατρέξτε στη διεύθυνση
-    http://www.gnu.org/licenses.</p>
+    <a href="http://www.gnu.org/licenses">http://www.gnu.org/licenses</a>.</p>
 
 {% endblock %}
