--- a/tigahelp/templates/tigahelp/license_fr.html
+++ b/tigahelp/templates/tigahelp/license_fr.html
@@ -37,6 +37,6 @@ Licence de Mosquito Alert
     SANS AUCUNE GARANTIE ; sans même la garantie implicite de QUALITÉ MARCHANDE ou d'ADAPTATION À UN USAGE PARTICULIER.
     Voir la licence publique générale GNU pour plus de détails. Vous devriez avoir reçu une copie de la licence publique
     générale GNU en même temps que ce programme. Si ce n'est pas le cas, consultez le site
-    http://www.gnu.org/licenses.</p>
+    <a href="http://www.gnu.org/licenses">http://www.gnu.org/licenses</a>.</p>
 
 {% endblock %}
