--- a/tigahelp/templates/tigahelp/license_hu.html
+++ b/tigahelp/templates/tigahelp/license_hu.html
@@ -32,6 +32,6 @@ Mosquito Alert Licenc
     érdekében terjesztjük, hogy hasznos lesz, de BÁRMI GARANCIA NÉLKÜL; az ELADHATÓSÁGRA vagy az ADOTT CÉLRA VALÓ
     HASZNÁLHATÓSÁG garanciája nélkül. További részletekért olvasd el a GNU General Public Licenct. Ezzel a programmal
     együtt kellett kapjon egy másolatot a GNU General Public Licencből. Amennyiben nem, látogasson el a
-    http://www.gnu.org/licenses oldalra. </p>
+    <a href="http://www.gnu.org/licenses">http://www.gnu.org/licenses</a> oldalra. </p>
 
 {% endblock %}
