--- a/tigahelp/templates/tigahelp/license_lb.html
+++ b/tigahelp/templates/tigahelp/license_lb.html
@@ -35,6 +35,6 @@ Mosquito Alert Lizenz
     gëtt verdeelt an der Hoffnung datt et nëtzlech ass, awer OUNI GARANTIE; ouni och déi implizit Garantie vu
     VERMAARTUNGSEEGNUNG oder EEGNUNG FIR E BESTËMMT ZIL. Kuckt d'GNU General Public License fir méi Detailer. Dir sollt
     eng Kopie vun der GNU General Public License zesumme mat dësem Programm kritt hunn. Wann net, kuckt
-    http://www.gnu.org/licenses.</p>
+    <a href="http://www.gnu.org/licenses">http://www.gnu.org/licenses</a>.</p>
 
 {% endblock %}
