--- a/tigahelp/templates/tigahelp/license_sl.html
+++ b/tigahelp/templates/tigahelp/license_sl.html
@@ -33,6 +33,6 @@ Licenca Mosquito Alert
     objavila Free Software Foundation (različica licence 3 ali novejša).</p> <p>Ta program se distribuira v upanju, da
     bo koristen, vendar BREZ KAKRŠNEGAKOLI JAMSTVA; brez implicitne garancije ZA PRODAJNOST ali USTREZNOST ZA POSEBEN
     NAMEN. Za več podrobnosti glejte splošno javno licenco GNU. Skupaj s tem programom bi morali dobiti kopijo splošne
-    javne licence GNU. Če ne, glejte http://www.gnu.org/licenses.</p>
+    javne licence GNU. Če ne, glejte <a href="http://www.gnu.org/licenses">http://www.gnu.org/licenses</a>.</p>
 
 {% endblock %}
