--- a/tigahelp/templates/tigahelp/license_sq.html
+++ b/tigahelp/templates/tigahelp/license_sq.html
@@ -56,7 +56,7 @@
 </p>
 
 <p>
-    Ky program është shpërndarë me shpresën që ai do të jetë i përdorshëm, por PA NDONJË GARANCI; madje pa garancinë e mirëkuptuar të TREGTUESHMËRISË ose PËRSHTATSHMËRISË PËR NJË QËLLIM TË VEÇANTË. Shihni GNU Licensën e Përgjithshme Publike për më shumë detaje. Duhet të keni marrë një kopje të Licensës së Përgjithshme Publike së bashku me këtë program.
+    Ky program është shpërndarë me shpresën që ai do të jetë i përdorshëm, por PA NDONJË GARANCI; madje pa garancinë e mirëkuptuar të TREGTUESHMËRISË ose PËRSHTATSHMËRISË PËR NJË QËLLIM TË VEÇANTË. Shihni GNU Licensën e Përgjithshme Publike për më shumë detaje. Duhet të keni marrë një kopje të Licensës së Përgjithshme Publike së bashku me këtë program <a href="http://www.gnu.org/licenses">http://www.gnu.org/licenses</a>.
 </p>
 
 {% endblock %}
