--- a/tigahelp/templates/tigahelp/license_en.html
+++ b/tigahelp/templates/tigahelp/license_en.html
@@ -34,6 +34,6 @@ Mosquito Alert License
     program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
     warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
     details. You should have received a copy of the GNU General Public License along with this program. If not, see
-    http://www.gnu.org/licenses. </p>
+    <a href="http://www.gnu.org/licenses">http://www.gnu.org/licenses</a>. </p>
 
 {% endblock %}
