--- a/tigahelp/templates/tigahelp/license_hr.html
+++ b/tigahelp/templates/tigahelp/license_hr.html
@@ -21,17 +21,17 @@ Mosquito Alert License
         href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com.</a></p> <p>Autori (poredani po abecedi): Frederic
     Bartumeus, Berj Dekramanjian, Roger Eritja, Santi Escartin, Agusti Escobar, Joan Garriga, Misericordia Girones,
     Zivko Juznic - Zonta, Aitana Oltra, John R.B. Palmer, Ariadna Pena, Alex Richter-Boix, Isis Sanpera, Alex Tarrago,
-    Marina Torres.</p> <p>U suradnji s AIM COST zajednicom (https://www.aedescost.eu/) i Global Mosquito Alert
-    (https://globalmosquitoalert.com/).</p> <p>Fotografije komaraca u aplikaciji Vodič za komarce su slike autora Roger
+    Marina Torres.</p> <p>U suradnji s AIM COST zajednicom (<a href="https://www.aedescost.eu/">https://www.aedescost.eu/</a>) i Global Mosquito Alert
+    (<a href="https://globalmosquitoalert.com/">https://globalmosquitoalert.com/</a>).</p> <p>Fotografije komaraca u aplikaciji Vodič za komarce su slike autora Roger
     Eritja i imaju sva pridržana prava, naznačeno s</p> <p>© Roger Eritja.</p> <p>Ilustracije komaraca u Vodiču za
     komarce i Tutorialu aplikacije: CC By 2.0, JL Ordonez</p> <p>Ikone slivnika modificirao je Alex Richter- Boix, iz
-    biblioteke besplatnih ikona slivnika #338924 (https://icon-library.net/icon/drain-icon-3.htm).</p> <p>Ubode komaraca
+    biblioteke besplatnih ikona slivnika #338924 (<a href="https://icon-library.net/icon/drain-icon-3.htm">https://icon-library.net/icon/drain-icon-3.htm</a>).</p> <p>Ubode komaraca
     modificirao je Alex Richter - Boix, iz Ubodi komarac, Sveta_Aho, Adobe Stock Standard License.</p> <p>Životni
     ciklus, siluete za mobilni telefon, crtež pozadinskog praćenja dao je Alex Richter-Boix, CC BY</p> <p>Mosquito Alert
     je besplatan softver: može se distribuirati i/ili modificirati pod uvjetima javne opće licence GNU General Public
     Licence, koju je objavio Free Software Foundation (verzija licence 3 ili novija).</p> <p>Program je distribuiran u
     nadi da će biti koristan, ali bez ikakvih garancija, čak i bez podrazumijevane garancije za prodaju ili pogodnosti
     za specijalne namjene. Za više informacija pogledajte GNU General Public Licence. Trebali ste dobiti kopiju GNU
-    General Public Licence zajedno s programom. Ukoliko niste dobili, pogledajte http://www.gnu.org/licenses </p>
+    General Public Licence zajedno s programom. Ukoliko niste dobili, pogledajte <a href="http://www.gnu.org/licenses">http://www.gnu.org/licenses</a></p>
 
 {% endblock %}
