--- a/tigahelp/templates/tigahelp/license_mk.html
+++ b/tigahelp/templates/tigahelp/license_mk.html
@@ -21,18 +21,18 @@ Mosquito Alert License
     достапна на веб-страната на проектот <a href="http://www.mosquitoalert.com/en/"> www.mosquitoalert.com</a>.</p> <p>
     Автори (по азбучен ред): Фредерик Бартумеус, Берј Декрамањиан, Роџер Еритја, Санти Ескартин, Агусти Ескобар, Јоан
     Гарига, Мисерикордиа Диронес, Живко Јузниќ-Зонта, Аитана Олтра, Џон Р.Б.Палмер, Ариадна Пења, Алекс Рихтер-Боикс,
-    Исис Санпера, Алекс Тараго, Марина Торес.</p> <p>Во соработка со AIM COST заедницата (https://www.aedescost.eu/) и
-    Глобална Предупредување за комарец(https://globalmosquitoalert.com/).</p> <p>Сликите од комарците во апликацијата,
+    Исис Санпера, Алекс Тараго, Марина Торес.</p> <p>Во соработка со AIM COST заедницата (<a href="https://www.aedescost.eu/">https://www.aedescost.eu/</a>) и
+    Глобална Предупредување за комарец(<a href="https://globalmosquitoalert.com/">https://globalmosquitoalert.com/</a>).</p> <p>Сликите од комарците во апликацијата,
     односно во "Водич за комарци" се на Роџер Еритја, сите права се задржани.</p> <p>Илустрацијата на комарците во
     "Водичот за комарци" и "Упатство за апликацијата" се на ЈЛ Ордонез, CC BY 2.0,</p> <p>Иконите од одводи,
     модифицирани од страна на Алекс Рихтер, се од Free Icons Library's Drain Icon # 338924
-    (https://icon-library.net/icon/drain-icon-3.htm). Јавно достапни.</p> <p>Убодите од комарци, модифицирано од Алекс
+    (<a href="https://icon-library.net/icon/drain-icon-3.htm">https://icon-library.net/icon/drain-icon-3.htm</a>). Јавно достапни.</p> <p>Убодите од комарци, модифицирано од Алекс
     Рихетр-Боикс од Mosquito Bite од Sveta Аhо, Adobe Stock Standard License.</p> <p>Животниот циклус, мобилната
     телефонска силуета, Цртеж за следење во позадина, од Алекс Рихтер-Боикс, CC BY 2.0</p> <p><span>Предупредување за комарец</span>
     е слободно достапен софтвер: може да се препрати/или модифицира под условите на GNU Генерална јавна лиценца објавена
     од Слободна Софтверска Фондација (лиценца верзија 3 или повеќе).</p> <p>Овој програм е дистрибуиран со надеж дека ќе
     биде практичен, но БЕЗ НИКАКВА ГАРАНЦИЈА; без евентуално имлицирана гаранција на ТРГОВСКА СПОСОБНОСТ или ЗА ОДРЕДЕНА
     ЦЕЛ.Погледнете GNU Генерални Јавни Лиценци за повеќе детали. Би требало да имате копија од GNU Генералните Јавни
-    Лиценци заедно со оваа програма. Доколку немате, пребарајте на http://www.gnu.org/licenses.</p>
+    Лиценци заедно со оваа програма. Доколку немате, пребарајте на <a href="http://www.gnu.org/licenses">http://www.gnu.org/licenses</a>.</p>
 
 {% endblock %}
