--- a/tigahelp/templates/tigahelp/license_sr.html
+++ b/tigahelp/templates/tigahelp/license_sr.html
@@ -21,15 +21,15 @@ Licenca
     Alarma za komarce je dostupan na internet stranici projekta <a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>.</p> <p>Autori (poređanji po alfabetu): Frederic Bartumeus, Berj Dekramanjian, Roger
     Eritja, Santi Escartin, Agusti Escobar, Joan Garriga, Misericordia Girones, Živko Južnić-Zonta, Aitana Oltra, John
     R.B. Palmer, Ariadna Pena, Alex Richter-Boix, Isis Sanpera, Alex Tarrago, Marina Torres. </p> <p>U saradnji sa AIM
-    COST zajednicom (https://www.aedescost.eu/) i Globalnog Alarma za komarce (https://globarmosquitoalert.com/)</p> <p>
+    COST zajednicom (<a href="https://www.aedescost.eu/">https://www.aedescost.eu/</a>) i Globalnog Alarma za komarce (<a href="https://globarmosquitoalert.com/">https://globarmosquitoalert.com/</a>)</p> <p>
     Fotografije komaraca u aplikaciji Vodič za komarce od autora Roger Eritja, sva prava rezervina. </p> <p>Ilustracije
     komaraca u Vodiču za komarce i Tutorijalu aplikacije od JL Ordonez, CC BY 2.0, </p> <p>Drain ikonice, modifikovao
-    Alex Richter, iz Biblioteke besplatnih drain ikonica #338924 (https://icon-library.net/icon/drain-icon-3.htm). </p>
+    Alex Richter, iz Biblioteke besplatnih drain ikonica #338924 (<a href="https://icon-library.net/icon/drain-icon-3.htm">https://icon-library.net/icon/drain-icon-3.htm</a>). </p>
 <p>
     <span> Ubodi komaraca, modifikovao Alex Richter-Boix, izUbodi komaraca od Sveta_Aho, Adobe Stock Standard Licence</span>
 </p> <p>Životni ciklus, Siluete za mobilni telefon, Crteži pozadinskog praćenja, dao Alex Richter-Boix, CC BY 2.0. </p>
 <p>Alarm za komarce je besplatan softver: može se distribuirati i/ili modifikovati pod uslovima GNU <span>General Public License</span>
-    koje je objavila Fondacija besplatnih softvera (verzija licence 3 ili novija). </p> <p><span>Program je distribuiran u nadi da će biti koristan, ali BEZ IKAKVIH GARANCIJA, čak i bez podrazumevane garancije za BENEFIT i POGODNOSTI ZA SPECIJALNE NAMENE. </span><span>Trebalo bi da ste dobili kopiju GNU General Public License zajedno sa ovim programom. Ukoliko niste dobili, pogledajte http://www.gnu.org/licenses. </span>
+    koje je objavila Fondacija besplatnih softvera (verzija licence 3 ili novija). </p> <p><span>Program je distribuiran u nadi da će biti koristan, ali BEZ IKAKVIH GARANCIJA, čak i bez podrazumevane garancije za BENEFIT i POGODNOSTI ZA SPECIJALNE NAMENE. </span><span>Trebalo bi da ste dobili kopiju GNU General Public License zajedno sa ovim programom. Ukoliko niste dobili, pogledajte <a href="http://www.gnu.org/licenses">http://www.gnu.org/licenses</a>. </span>
 </p>
 
 {% endblock %}
