--- a/tigahelp/templates/tigahelp/scoring_sq.html
+++ b/tigahelp/templates/tigahelp/scoring_sq.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block page_title %}
-    Mosquito Alert Score Info
+Mosquito Alert Score Info
 {% endblock %}
 
 
@@ -12,37 +12,43 @@
     <div class='text_container'>
 
         <h2>INFORMACION MBI PIKËT</h2>
-        <p>Veprimet e kryera tek aplikacioni "Alerti i Mushkonjave" kanë njohje dhe shpërblime në formën e pikëve. Numri i pikëve për raport ndryshon në varësi të informacionit të siguruar dhe cilësisë së tij.</p>
-
-        <p>Pikët maksimale që mund të fitohen për raport janë:</p>
+        <p>Veprimet e kryera tek Aplikacioni "Mosquito Alert" kanë njohje dhe shpërblime në formën e pikëve. Numri i
+            pikëve për raport ndryshon në varësi të informacionit të siguruar dhe cilësisë së tij.</p>
+        <p>Pikët maksimale që mund të fitohet për raport janë:</p>
         <ul>
             <li>Mushkonja invazive Aedes: 20 pikë</li>
             <li>Mushkonja e zakonshme: 14 pikë</li>
-            <li>Vende shumimi si kanalizimet kulluese: 20 pikë</li>
-            <li>Vende shumimi të tjera në zona publike: 16 pikë</li>
+            <li>Vende ku rriten si puseta/kanalizime: 20 pikë</li>
+            <li>Vende ku rriten të tjera në zona publike: 16 pikë</li>
         </ul>
-
-        <p>Përveç kësaj, ka bonuse shtesë për mushkonjën e parë të sezonit, raporti i parë i ditës ose për pjesëmarrësit e shpeshtë. Kur arrini një numër specifik raportesh, jo vetëm që merrni pikë shtesë, por merrni edhe një trofe të veçantë. Ka trofe të ndryshme sipas pikave të arritura.</p>
-
-        <p>Ato raprote që dërgohen si mushkonja, por që dalin që nuk janë të tilla, sipas vlerësimit të ekspertëve, nuk do të fitojnë pikë. Një fotografi që nuk i lejon ekspertët të përcaktojnë mushkonjën ose vendin e shumimit të tyre, nuk do të fitojnë pikë gjithashtu.</p>
-
+        <p></p>
+        <p>Përveç kësaj, ka bonuse shtesë për mushkonjën e parë të sezonit, raportin e parë të ditës ose për
+            pjesëmarrësit e shpeshtë. Kur arrini një numër specifik raportesh, jo vetëm që merrni pikë shtesë, por
+            merrni edhe një trofe të veçantë. Ka trofe të ndryshme sipas pikave të arritura.</p>
+        <p>Ato raporte që dërgohen si mushkonja, por që sipas vlerësimit të ekspertëve dalin që nuk janë të tilla, nuk
+            do të fitojnë pikë. Një fotografi që nuk i lejon ekspertët të përcaktojnë mushkonjën ose vendin ku ato
+            rriten, gjithashtu, nuk do të fitojë pikë.</p>
         <p>Grumbullimi i pikëve do ju lejojë që të shkoni një <strong>nivel</strong> më sipër:</p>
         <ul>
             <li>(1) Rishtazi (fillestar)</li>
             <li>(2) Kontribues (kontribues)</li>
             <li>(3) Ekspert (ekspert)</li>
-            <li>(4) Mjeshtër/Master (mjeshtër/master)</li>
-            <li>(5) Mjeshtër/Master i Madh (mjeshtër/master i madh)</li>
+            <li>(4) Master (master)</li>
+            <li>(5) Master Kryesor (master kryesor)</li>
         </ul>
-
         <p>Këto ikona tregojnë nivelin e arritur:</p>
 
         <img src="{% static "tigahelp/InfoScoring_half.png" %}" width="100%">
 
         <h2>Paneli i pikëve</h2>
-        <p>Renditja globale aksesohet duke klikuar tek pikët në ekranin kryesor. Shtypja e një pozicioni renditës do të shfaq numrin e proporcionit të pikëve maksimale dhe minimale (breakdown points) që janë fituar nga përdoruesi.</p>
-        <p>Po të klikoni mbi "Më shumë detaje" do të aksesojë panelin e numrit të proporcionit të pikëve maksimale dhe minimale (breakdown points).</p>
-        <p>Në këtë seksion gjendet lista e raporteve të dërguara me pikët e fituara në secilin prej tyre. Raportet janë interaktive, duke klikuar, ju do të merrni proporcionin midis pikëve maksimale dhe minimale dhe përse keni fituar pikë.</p>
+        <p>Renditja globale arrihet duke klikuar tek pikët në ekranin kryesor. Shtypja e një pozicioni renditës do të
+            shfaq numrin e proporcionit të pikëve maksimale dhe minimale (breakdown points) që janë fituar nga
+            përdoruesi.</p>
+        <p>Po të klikoni mbi "Më shumë detaje" do të arrini panelin e numrit të proporcionit të pikëve maksimale dhe
+            minimale.</p>
+        <p>Në këtë seksion gjendet lista e raporteve të dërguara me pikët e fituara në secilin prej tyre. Raportet janë
+            interaktive, duke klikuar, ju do të merrni proporcionin midis pikëve maksimale dhe minimale dhe përse keni
+            fituar pikë.</p>
 
     </div>
 </div>
