--- a/tigahelp/templates/tigahelp/about_us_sq.html
+++ b/tigahelp/templates/tigahelp/about_us_sq.html
@@ -8,16 +8,16 @@
 {% block content %}
 
     <h2>Entitetet Koordinuese</h2>
-    <p>"Alerti i Mushkonjave" udh ëhiqet nga Institicionet Kërkimore Publike të mëposhtme: Qendra Kërmikore Këshillimore Kombëtare Spanjolle për Studime të Avancuara e Blanes (CEAB-CSIC), Qendra për Kërkime Ekologjike dhe Pyje e Aplikuar (CREAF) dhe Universiteti Pompeu Fabra (UPF). Instituti Katalan për Kërkime dhe Studime të Avancuara (ICREA), merr pjesë gjithashtu.</p>
+    <p>Aplikacioni "Mosquito Alert" udhëhiqet nga Institicionet Kërkimore Publike të mëposhtme: Qendra Kërmikore Këshillimore Kombëtare Spanjolle për Studime të Avancuara e Blanes (CEAB-CSIC), Qendra për Kërkime të Aplikuara Ekologjike dhe Pyjore (CREAF) dhe Universiteti Pompeu Fabra (UPF). Instituti Katalan për Kërkime dhe Studime të Avancuara (ICREA), merr pjesë gjithashtu.</p>
     <p class="centeredImage">
         <img style="max-width: 100%; height: auto;" src="{% static "tigahelp/colaboradors_about_us.jpg" %}">
     </p>
 
     <h2>Bashkëpunëtorët</h2>
-    <p>"Alerti i Mushkonjave" është mundësuar gjithashtu falë bashkëpunimit i një numri ekspertësh (profesionistë të cilët, për shembull, vlerësojnë të dhënat shkencore të dërguara ngaqytetarë), dhe entitete nga shtete të ndryshme të cilët punojnë në fushën e shëndetit publik, kontrollin e llojeve invazive dhe edukimin mjedisor.</p>
+    <p>Aplikacioni "Mosquito Alert" është mundësuar gjithashtu falë bashkëpunimit të një numri ekspertësh (profesionistë të cilët, për shembull, vlerësojnë të dhënat shkencore të dërguara nga qytetarët) dhe entitete nga shtete të ndryshme të cilët punojnë në fushën e shëndetit publik, kontrollin e llojeve invazive dhe edukimin mjedisor.</p>
 
     <h2>Financimi dhe pjesëmarrja në projekt</h2>
-    <p>"Alerti i Mushkonjave" merr pjesë në projekte konkuruese kërkmimore, në shpërndarjen dhe përhapjen e komunikimit shkencor (duke përfshirë Planin Spanjoll të Shpërthimit, linjën e fondeve nga projekti Horizon 2020 dhe midis të tjerave, Projekti i Themelimit "la Caixa". Alerti i Mushkonjave gjithashtu mbështetet nga kontribute të burimeve nga entitetet lidere dhe ato bashkëpunuese.</p>
+    <p>Aplikacioni "Mosquito Alert" merr pjesë në projekte konkuruese kërkmimore, në shpërndarjen dhe përhapjen e komunikimit shkencor (duke përfshirë Planin Spanjoll të Shpërthimit, linjën e fondeve nga projekti Horizon 2020 dhe midis të tjerave, Projekti i Themelimit "la Caixa". Aplikacioni "Mosquito Alert", gjithashtu mbështetet nga kontribute të burimeve nga entitetet lidere dhe ato bashkëpunuese.</p>
 
     <p>Më shumë informacione mbi entitetet, bashkëpunëtorët dhe projektet mund te gjenden në: <a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com </a> dhe në rrjete sociale.</p>
 
