--- a/tigahelp/templates/tigahelp/license_sq.html
+++ b/tigahelp/templates/tigahelp/license_sq.html
@@ -12,15 +12,15 @@
 </div>
 
 <p>
-    Alerti i Mushkonjave është një sistem mbi shkencën qytetare që lejon bashkpunimin midis aktorëve të ndryshëm në studim, monitorimin dhe kontrollin e mushkonjave që janë vektorë të sëmundjeve si dengue, chikungunya, Zika dhe virusi i Nilit perëndimor. Aplikacioni Alerti i Mushkonjave (më parë i quajtur Tigatrapp), është një aplikacion për përdorim në celularë dhe tableta, të cilët i lejojnë çdonjërit të marrë pjesë në Alertin e Mushkonjave.
+    Aplikacioni "Mosquito Alert" është një sistem mbi shkencën qytetare që lejon bashkëpunimin midis aktorëve të ndryshëm në studim, monitorimin dhe kontrollin e mushkonjave që janë vektorë të sëmundjeve si dengue, chikungunya, Zika dhe virusi i Nilit perëndimor. Aplikacioni "Mosquito Alert" (më parë i quajtur Tigatrapp), është një aplikacion për përdorim në celularë dhe tableta, të cilët i lejojnë çdonjërit të marrin pjesë tek Aplikacioni "Mosquito Alert".
 </p>
 
 <p>
-    Aplikacioni Alerti i Mushkonjave është zhvilluar nga këto institucione: Qendra Kërmikore Këshillimore Kombëtare Spanjolle për Studime të Avancuara e Blanes (CEAB-CSIC), Qendra për Kërkime Ekologjike dhe Pyje e Aplikuar (CREAF), Universiteti Pompeu Fabra (UPF) dhe Instituti Katalan për Kërkime dhe Studime të Avancuara (ICREA).
+    Aplikacioni "Mosquito Alert" është zhvilluar nga këto institucione: Qendra Kërmikore Këshillimore Kombëtare Spanjolle për Studime të Avancuara e Blanes (CEAB-CSIC), Qendra për Kërkime të Aplikuara Ekologjike dhe Pyjore (CREAF), Universiteti Pompeu Fabra (UPF) dhe Instituti Katalan për Kërkime dhe Studime të Avancuara (ICREA).
 </p>
 
 <p>
-    Burimi i kodit për aplikacionin Alerti i Mushkonjave është i disponueshëm në faqen e internetit të projektit <a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>.
+    Burimi i kodit për Aplikacioni "Mosquito Alert" është i disponueshëm në faqen e internetit të projektit www.mosquitoalert.com.
 </p>
 
 <p>
@@ -28,7 +28,7 @@
 </p>
 
 <p>
-    Në bashkëpunim me komunitetin AIM COST (<a href="https://www.aedescost.eu/">https://www.aedescost.eu/</a>) dhe Alertin Global të Mushkonjave (<a href="https://globalmosquitoalert.com/">https://globalmosquitoalert.com/</a>).
+    Në bashkëpunim me komunitetin AIM COST (<a href="https://www.aedescost.eu/">https://www.aedescost.eu/</a>) dhe Aplikacionin "Global Mosquito Alert (<a href="https://globalmosquitoalert.com/">https://globalmosquitoalert.com/</a>).
 </p>
 
 <p>
@@ -44,7 +44,7 @@
 </p>
 
 <p>
-    Pickimet e Mushkonjave, modifikuar nga Alex Richter-Boix nga Pickimet e Mushkonjave nga Sveta_Aho, Adobe Stock Standard License.
+    Pickimet e Mushkonjave, modifikuar nga Alex Richter-Boix, Pickimet e Mushkonjave nga Sveta_Aho, Adobe Stock Standard License.
 </p>
 
 <p>
@@ -52,7 +52,7 @@
 </p>
 
 <p>
-    Alerti i Mushkonjave është një program i lirë: i cili mund të rishpërndahet dhe/ose modifikohet nën kushtet dhe termat e GNU Licencës së Përgjithshme Publike të publikuar nga Fondacioni i Programeve të Lira (versioni i licencës 3 ose më i lartë).
+    Aplikacioni "Mosquito Alert" është një program i lirë: i cili mund të rishpërndahet dhe/ose modifikohet nën kushtet dhe termat e GNU Licencës së Përgjithshme Publike të publikuara nga Fondacioni i Programeve të Lira (versioni i licencës 3 ose më i lartë).
 </p>
 
 <p>
