--- a/tigahelp/templates/tigahelp/terms_sq.html
+++ b/tigahelp/templates/tigahelp/terms_sq.html
@@ -12,56 +12,20 @@ Marrëveshja e Përdoruesit
     <h2>Marrëveshja e Përdoruesit</h2>
 </div>
 
-<p>Alerti i Mushkonjave (me emrat që mund të ketë patur në të shkuarën ose mund të ketë në të ardhmen)është një sistem i
-    shkencës qytetare drejtuar nga Qendra Kombëtare Spanjolle e Këshillit Kërkimor të Blanes për Studime të Avancuara
-    (CEAB-CSIC), Qendra për Kërkime Ekologjike dhe Pyjeve të Aplikuara, Univeritet Pompeu Fabra (UPF) dhe Instituti
-    Katalan për Kërkime dhe Studime të Avancuara (ICREA).</p> <p>Alerti i Mushkonjave varet nga mbledhjet publike të të
-    dhënave mbi lloje të ndryshme mushkonjash si vektorë të sëmundjeve. Qytetarët marrin pjesë duke dërguar dhe
-    shpërndarë, të dhëna dhe imazhe, fotografi, nëpërmjet aplikacionit të ndryshëm Alerti i Mushkonjave me anë
-    tëpajisjeve celulare dhe pajisjeve të tjera elektronike. Pjesëmarrësit duhet të jenë të rritur ose duhet të marrin
-    pjesë nën mbikqyrjen e një të rrituri, në përputhje me legjislacionin e Spanjës dhe të vendin të tyre të
-    vendqëndrimit. Pjesëmarrësit duhet të pranojnë gjithashtu politikat e privatësisë së Alertit të Mushkonjave dhe të
-    jenë dakord me termat e përdorimt si më poshtë:</p>
+<p>Aplikacioni "Mosquito Alert" (me emrat që mund të ketë patur në të shkuarën ose mund të ketë në të ardhmen), është një sistem i shkencës qytetare drejtuar nga Qendra Kërmikore Këshillimore Kombëtare Spanjolle për Studime të Avancuara e Blanes (CEAB-CSIC), Qendra për Kërkime të Aplikuara Ekologjike dhe Pyjore, Univeritet Pompeu Fabra (UPF) dhe Instituti Katalan për Kërkime dhe Studime të Avancuara (ICREA).</p>
+<p>Aplikacioni "Mosquito Alert" varet nga mbledhja e të dhënave publike mbi lloje të ndryshme mushkonjash si vektorë të sëmundjeve. Qytetarët marrin pjesë duke dërguar dhe shpërndarë të dhëna dhe imazhe (fotografi), nëpërmjet aplikacionit "Mosquito Alert" me anë të pajisjeve celulare dhe pajisjeve të tjera elektronike. Pjesëmarrësit (qytetarët) duhet të jenë të rritur ose duhet të marrin pjesë nën mbikqyrjen e një të rrituri, në përputhje me legjislacionin e Spanjës dhe të vendin të tyre të vendqëndrimit. Pjesëmarrësit (qytetarët) duhet të pranojnë gjithashtu politikat e privatësisë së Aplikacionit "Mosquito Alert" dhe të jenë dakord me termat e përdorimt si më poshtë:</p>
 <ol>
-    <li>Llojet e mushkonjave që Alerti i Mushkonjave punon mund të jenë vektorë të sëmundjeve si dengue, chikungunya dhe
-        Zika. Alerti i Mushkonjave kontribuon në luftimin e këtyre sëmundjeve, duke mbledhur të dhëna dhe imazhe, duke
-        analizuar informacione dhe duke kryer ndërgjegjësimin publik, monitorimin dhe kontrollin e aktivitetit të
-        mushkonjave. Duke qenë se këto mushkonja janë vektorë të sëmundjeve, kur merret pjesë në Alertin e Mushkonjave
-        duhet të ushtroni kujdes ekrtrem dhe nuk duhet të kërkoni këto lloje mushkonjash (në mënyrë direkte ose
-        nëpërmjet vendeve të tyre të rritjes), veçanërisht në vend ku sëmundjet që ato transmetojnë janë endemike ose
-        gjatë një shpërthimi të një sëmundje të tillë. Pjesëmarrja në Alertin e Mushkonjave mund të përfshijë raportimin
-        e përballjeve që ju keni me mushkonjat gjatë aktivitetit tuaj ditor dhe ndryshimit tëaktivitetit tuaj për të
-        reduktuar ekspozimin ndaj mushkonjave dhe vendeve të tyre të rritjes. Ju pranoni se që nëçdo rast nuk do të
-        rrisni ekspozimin tuaj ndaj mushkonjave duke marrë pjesë në këtë projekt.
+    <li>
+        Llojet e mushkonjave që Aplikacioni "Mosquito Alert" punon mund të jenë vektorë të sëmundjeve si dengue, chikungunya dhe Zika. Aplikacioni "Mosquito Alert" kontribuon në luftimin e këtyre sëmundjeve, duke mbledhur të dhëna dhe imazhe, duke analizuar informacione dhe duke kryer ndërgjegjësimin publik, monitorimin dhe kontrollin e aktivitetit të mushkonjave. Duke qenë se këto mushkonja janë vektorë të sëmundjeve, me pjesëmarrjen në Aplikacionin "Mosquito Alert" duhet të ushtroni kujdes ekrtrem dhe nuk duhet që ju të kërkoni vetë këto lloje mushkonjash (në mënyrë direkte ose nëpërmjet vendeve ku ato rriten), veçanërisht në vendet ku sëmundjet që ato transmetojnë janë endemike ose gjatë shpërthimit të një sëmundje të tillë. Pjesëmarrja në Aplikacionin "Mosquito Alert" mund të përfshijë raportimin e përballjeve që ju mund të keni me mushkonjat gjatë aktivitetit tuaj ditor dhe ndryshimit të aktivitetit tuaj për të reduktuar ekspozimin ndaj mushkonjave dhe vendeve ku ato rriten. Ju pranoni se në çdo rast nuk do të rrisni ekspozimin tuaj ndaj mushkonjave nga pjesëmarrja në këtë projekt.
     </li>
-    <li>Duke shpërndarë të dhënat dhe punën tuaj (p.sh. fotografi) me Alertin e Mushkonjave, ju jeni dakord me termat e
-        përdorimit, ju pranoni që puna (p.sh. fotografitë) të shpërndahen anonimisht pa përmendur emrin ose pseudonimin
-        tuaj dhe ju i siguroni Institucionieve që e drejtojnë aplikacionin Alerti i Mushkonjave, një licensë për punën
-        tuaj për kohëzgjatjen e barabartë me të drejtat e zbatueshme të autorit në fuqi për të qenë në gjendje për
-        eksplorimin e punës pa ndonjë kufizim dhe t'i'a caktojë palëve të treta në botë, pa honorare, joekskluzive dhe
-        të nën licensuara. Në çdo rast këto terma nuk nënkuptojnë për autorin origjinal ndonjë kufizim në përdorimin e
-        punës së tij/saj, duke qenë të mundur t'i shfrytëzojnë punët e tyre me mjete të tjera në një mënyrë të
-        pajtueshme me përbërësit e garantuar nga ky dokument.
+    <li>
+        Me shpërndajen e të dhënave dhe punën tuaj (p.sh. fotografi) me Aplikacionin "Mosquito Alert", ju jeni dakord me termat e përdorimit, ju pranoni që puna (p.sh. fotografitë) të shpërndahet anonimisht pa përmendur emrin ose pseudonimin tuaj dhe ju i siguroni Institucionieve që e drejtojnë këtë aplikacionin një licensë për punën tuaj për kohëzgjatjen e barabartë me të drejtat e zbatueshme në fuqi të autorit për të qenë në gjendje për të eksploruar punën pa ndonjë kufizim dhe t'i'a caktojë atë palëve të treta në botë, pa pagesë, joekskluzive dhe të nënlicensueshme. Në çdo rast këto terma nuk nënkuptojnë për autorin origjinal ndonjë kufizim në përdorimin e punës së tij/saj, duke patur të mundur shfrytëzimin e punëve tuaja me mjete të tjera në një mënyrë të pajtueshme me përbërësit e garantuar nga ky dokument.
     </li>
-    <li>Si rregull i përgjithshëm, çdo krijim origjinal që mund të mbrohet nga e drejta e autorit do të shpërndahet nga
-        Alerti i Mushkonjave me një licensë CC BY, duke treguar autorin anonim dhe emrin e projektit (për shembull:
-        Anonim, CC NGA Alerti i Mushkonjave), edhe nëse e mban emrin e autorit në të ose në të dhënat e tij. Kur është e
-        mundur, pjesë të të dhënave dhe tabelave që rezultojnë nga kontributet e përdoruesve do të lëshohen, si një
-        rregull i përgjithshëm, nën një licensë CC0. Në ngjarje të nevojës për të dhënë akses informacionit të ndjeshëm
-        për palët e treta (p.sh. profesionistë në ngarkim për monitorimin dhe kontrollin e mushkonjave, personeli
-        kërkimor, menaxherët e shëndetit publik, etj.), protokolle të përshtatshme dhe/ose licensa do të vendosen për
-        shpërndarje.
+    <li>Si rregull i përgjithshëm, çdo krijim origjinal që mund të mbrohet nga e drejta e autorit do të shpërndahet nga Aplikacionin "Mosquito Alert" me një licensë CC BY, duke treguar autorin anonim dhe emrin e projektit (për shembull: Anonim, CC NGA Aplikacionin "Mosquito Alert"), edhe nëse e mban emrin e autorit në të ose në të dhënat e tij. Kur është e mundur, pjesë të të dhënave dhe tabelave që rezultojnë nga kontributet e përdoruesve do të lëshohen, si një rregull i përgjithshëm, nën një licensë CC0. Në ngjarje të nevojës për t'i dhënë akses informacionit të ndjeshëm për palët e treta (p.sh. profesionistë në ngarkim për monitorimin dhe kontrollin e mushkonjave, personeli kërkimor, menaxherët e shëndetit publik, etj.), do të vendosen për shpërndarje protokolle të përshtatshme dhe/ose licensa.
     </li>
-    <li>Ju garantoni se keni të drejtat e nevojshme ligjore mbi të dhënat dhe punën që ju shpërndani me Alertin e
-        Mushkonjave dhe që këto nuk janë shpifje dhe që nuk shkelin ndonjë ligj. Pjesëmarrja në Alertin e Mushkonjave
-        është anonime për të garantuar mbrojtjen e privatësisë së pjesëmarrësve. Megjithatë, ju garantoni që nuk do të
-        shtoni informacione personale tuajat ose të palëve të treta në punën dhe të dhënat që do të dërgoni tek Alerti i
-        Mushkonjave. Ju kuptoni se këto punë dhe të dhëna mund të transferohen palëve të treta, dhe që Alerti i
-        Mushkonjave nuk mund të garantojë mundësinë e eleminimit të ndonjë të dhëne personale që ju dërgoni gabimisht.
+    <li>Ju garantoni se keni të drejtat e nevojshme ligjore mbi të dhënat dhe punën që ju shpërndani me Aplikacionin "Mosquito Alert" dhe që këto nuk janë shpifje dhe që nuk shkelin ndonjë ligj. Pjesëmarrja në Aplikacionin "Mosquito Alert" është anonime për të garantuar mbrojtjen e privatësisë së pjesëmarrësve (qytetarëve). Megjithatë, ju garantoni që nuk do të shtoni informacione personale tuajat ose të palëve të treta në punën dhe të dhënat që do të dërgoni tek Aplikacionin "Mosquito Alert". Ju kuptoni se këto punë dhe të dhëna mund t'iu transferohen palëve të treta, dhe që Aplikacioni "Mosquito Alert" nuk mund të garantojë mundësinë e eleminimit të ndonjë të dhëne personale që ju dërgoni gabimisht.
     </li>
-    <li>Ju jeni dakord të dëmshpërbleni individët, institucionet dhe/ose anëtarët e Alertit të Mushkonjave dhe
-        bashkëpunëtorëve për ndonjë detyrim ligjor dhe/ose monetar dhe çdo shpenzim tjetër që mund të pësohet si
-        rezultat i shkeljeve tuaja të garancive të mësipërme.
+    <li>Ju jeni dakord të dëmshpërbleni individët, institucionet dhe/ose anëtarët e Aplikacionit "Mosquito Alert" dhe bashkëpunëtorëve për ndonjë detyrim ligjor dhe/ose monetar dhe çdo shpenzim tjetër që mund të pësohet si rezultat i shkeljeve tuaja të garancive të mësipërme.
     </li>
 </ol>
 
